style: page overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
   margin: 0;
 }
 #root {
-  height: 100vh;
   width: 100%;
   background-color: white;
+  overflow: scroll;
 }
 
 dialog:-internal-dialog-in-top-layer::backdrop {
